# trident

./: .gitignore  Cargo.toml  LICENSE  README.md  trident.code-workspace
.trident/instances/hello_kitty/: instance.toml
src/libtrident/: Cargo.toml
src/libtrident/src/: deploy.rs  download.rs  instance.rs  lib.rs  machine.rs  metrology.rs  model.rs  packages.rs  profile.rs  repo.rs  repository.rs  resolve.rs  resource.rs  resources.rs
src/libtrident/src/deploy/: polylock.rs
src/libtrident/src/machine/: store.rs
src/libtrident/src/model/: loader.rs  package.rs  persistent.rs
src/libtrident/src/model/domain/: metadata.rs
src/libtrident/src/model/persistent/: metadata.rs
src/libtrident/src/repo/: curseforge.rs  modrinth.rs
src/libtrident_extra/: Cargo.toml
src/libtrident_extra/src/: provider.rs
src/libtrident_extra/src/provider/: curseforge.rs
src/trident/: Cargo.toml
src/trident/src/: cli.rs  io.rs  machine.rs  main.rs  models.rs  repo.rs
src/trident/src/cli/: generic.rs  instance.rs
src/trident/src/models/: eternal.rs
src/trident/src/repo/: curseforge.rs
