[package]
name = "libtrident"
version = "0.1.0"
edition = "2021"
authors = ["Chien Zhang(zqy0224@live.com)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33", features = ["full"] }
ron = "0.8"
thiserror = "1.0"
nanoid = "0.4" # uuid replaced with
sanitize-filename = "0.5"
packageurl = "0.3"