[package]
name = "libtrident"
version = "0.1.0"
edition = "2021"
authors = ["Chien Zhang(zqy0224@live.com)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.5", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
ron = "0.9.0-alpha"
thiserror = "1.0"
nanoid = "0.4"
sanitize-filename = "0.5"
packageurl = "0.4"