[package]
name = "trident"
version = "0.1.0"
edition = "2021"
authors = ["Chien Zhang(zqy0224@live.com)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libtrident = { path = "../libtrident" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.33", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
console = "0.15"
indicatif = "0.17"