[package]
name = "trident"
version = "0.1.0"
edition = "2021"
authors = ["Chien Zhang(zqy0224@live.com)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libtrident = { path = "../libtrident" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.33", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
ron = "0.8"
console = "0.15"
indicatif = "0.17"
url = { version = "2.4.1", features = [] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4"